--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>EmergencyRescueService1122Kpk</title>
-    <base href="/noc-qr-varification" />
+   <base href="/noc-qr-varification/" />
+
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
     <link rel="stylesheet" href="css/app.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
@@ -30,4 +31,5 @@
 </body>
 
 </html>
+
 
